Create and delete vendor key from the UI